# mokumitsu-urban-renewal

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  MOKUMITSU_RELATED_WORK.md  RESEARCH.md  ROADMAP.md  WIND_VALIDATION_STATUS.md
examples/: README.md  houdini_joint_design.hip  houdini_joint_feasibility.hip  houdini_mokumitsu.hip
examples/cache/: joint_feasibility_timeline.0001.bgeo.sc  joint_feasibility_timeline.0002.bgeo.sc  joint_feasibility_timeline.0003.bgeo.sc  joint_feasibility_timeline.0004.bgeo.sc  mokumitsu_timeline.0001.bgeo.sc  mokumitsu_timeline.0002.bgeo.sc  mokumitsu_timeline.0003.bgeo.sc  mokumitsu_timeline.0004.bgeo.sc  mokumitsu_timeline.0005.bgeo.sc  mokumitsu_timeline.0006.bgeo.sc  mokumitsu_timeline.0007.bgeo.sc
houdini/: build_joint_design_hip.py  build_joint_feasibility_hip.py  build_mokumitsu_hip.py  live_joint_design.py  verify_joint_design_hip.py
models/: RELEASE_NOTES.md  manifest.json
scripts/: bench_joint_design_worker.py  download_models.py  evaluate_cluster_renewal.py  evaluate_joint_feasibility.py  export_residential_torchscript.py  gen_mokumitsu.py  gen_residential_dataset.py  joint_design_worker.py  render_readme_overview.py  simulate_joint_renewal.py  simulate_mokumitsu_fire.py  simulate_mokumitsu_renewal.py  train_residential_fno.py  validate_residential_dataset.py  verify_cluster_renewal_xlb.py  verify_joint_renewal_xlb.py  verify_residential_grid.py
src/mokumitsu/: __init__.py  accelerated.py  cli.py  comfort.py  design.py  district.py  feasibility.py  fire.py  geometry.py  joint_renewal.py  model.py  organic.py  pareto.py  renewal.py  wind.py
tests/: test_design.py  test_district_wind.py  test_feasibility.py  test_fire.py  test_joint_renewal.py  test_model_manifest.py  test_mokumitsu.py  test_mokumitsu_cli.py  test_renewal.py  test_renewal_pareto.py  test_residential_dataset_contract.py
