[project]
name = "mokumitsu-urban-renewal"
version = "0.1.0"
description = "Wind- and fire-aware renewal research for dense Japanese neighbourhoods."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "otanl" }]
keywords = [
    "urban-renewal",
    "pedestrian-wind",
    "fire-spread",
    "multi-objective-optimization",
    "houdini",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.26,<3",
    "shapely>=2.0,<3",
    "torch>=2.6,<3",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8,<4"]
interactive = ["neuraloperator>=2,<3"]
verify = [
    "houdini-xlb[xlb] @ git+https://github.com/otanl/houdini-xlb.git@0d49c20748c91bc6ab5983ecdf79f8a062d92eeb",
    "matplotlib>=3.8,<4",
]
dev = [
    "pytest",
    "ruff",
    "houdini-xlb @ git+https://github.com/otanl/houdini-xlb.git@0d49c20748c91bc6ab5983ecdf79f8a062d92eeb",
]

[project.urls]
Homepage = "https://github.com/otanl/mokumitsu-urban-renewal"
Repository = "https://github.com/otanl/mokumitsu-urban-renewal"
Issues = "https://github.com/otanl/mokumitsu-urban-renewal/issues"
Documentation = "https://github.com/otanl/mokumitsu-urban-renewal/tree/main/docs"

[project.scripts]
mokumitsu = "mokumitsu.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mokumitsu"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [
    "/.pytest_cache",
    "/.ruff_cache",
    "/artifacts",
    "/checkpoints",
    "/data",
    "/outputs",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
pythonpath = ["src"]
